// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Должен вернуть все типы привода из gearTypes для марки BMW 1`] = `
Array [
  Object {
    "crossLinkText": "BMW с полным приводом",
    "gear": "ALL_WHEEL_DRIVE",
    "gearRus": "полным",
    "key": "AUDI_ALL_WHEEL_DRIVE",
    "params": Object {
      "gear_type": Array [
        "ALL_WHEEL_DRIVE",
      ],
    },
    "renderAtFooter": true,
    "value": "ALL_WHEEL_DRIVE",
  },
  Object {
    "crossLinkText": "BMW с передним приводом",
    "gear": "FORWARD_CONTROL",
    "gearRus": "передним",
    "key": "AUDI_FORWARD_CONTROL",
    "params": Object {
      "gear_type": Array [
        "FORWARD_CONTROL",
      ],
    },
    "renderAtFooter": true,
    "value": "FORWARD_CONTROL",
  },
]
`;

exports[`Должен вернуть все типы привода из gearTypes для марки BMW и модели X3 1`] = `
Array [
  Object {
    "crossLinkText": "BMW X3 с полным приводом",
    "gear": "ALL_WHEEL_DRIVE",
    "gearRus": "полным",
    "key": "AUDI_ALL_WHEEL_DRIVE",
    "params": Object {
      "gear_type": Array [
        "ALL_WHEEL_DRIVE",
      ],
    },
    "renderAtFooter": true,
    "value": "ALL_WHEEL_DRIVE",
  },
  Object {
    "crossLinkText": "BMW X3 с передним приводом",
    "gear": "FORWARD_CONTROL",
    "gearRus": "передним",
    "key": "AUDI_FORWARD_CONTROL",
    "params": Object {
      "gear_type": Array [
        "FORWARD_CONTROL",
      ],
    },
    "renderAtFooter": true,
    "value": "FORWARD_CONTROL",
  },
]
`;
